--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="main">
-      <h1>Sign Up</h1>
+      <form action="/sign-up" method="POST">
+        <h1>Sign Up</h1>
         <label for="username">Username *</label>
         <input
           id="username"
@@ -18,12 +19,7 @@
         />
 
         <label for="email">Email *</label>
-        <input
-          id="email"
-          name="email"
-          placeholder="email"
-          type="email"
-        />
+        <input id="email" name="email" placeholder="email" type="email" />
 
         <label for="password">Password *</label>
         <input id="password" name="password" type="password" />
