--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div class="main">
+      <% if(locals.user) { %>
+      <p><a href="/logout">Log out</a></p>
+      <% } else { %>
       <form action="/sign-up" method="POST">
         <h1>Sign Up</h1>
         <label for="username">Username *</label>
@@ -32,6 +35,8 @@
         </ul>
         <button type="submit">Sign Up</button>
       </form>
+      <p>Already have an account? <a href="/login">Login</a></p>
+      <% } %>
     </div>
   </body>
 </html>
