Add enctype attribute

--- a/views/new-file.ejs
+++ b/views/new-file.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="main">
-      <form action="/new-file" method="POST">
+      <form action="/new-file" method="POST" enctype="multipart/form-data">
         <input name="file" placeholder="Choose file" type="file" />
         <button type="submit">Upload</button>
       </form>
