--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,60 +8,8 @@
   </head>
   <body>
     <div class="main">
-      <% if (locals.user) { %>
-
-      <div class="actions">
-        <a href="/new-file"><button>+ New file</button></a>
-        <a href="/new-folder"><button>+ New folder</button></a>
-        <p><a href="/logout">Log out</a></p>
-      </div>
-
-      <div class="folders-section">
-        <h2>Your Folders</h2>
-        <% if (folders && folders.length > 0) { %>
-        <ul class="folder-list">
-          <% folders.forEach(folder => { %>
-          <li>
-            <a href="/folders/<%= folder.id %>"><%= folder.name %></a>
-          </li>
-          <% }) %>
-        </ul>
-        <% } else { %>
-        <p>You have no folders yet. Create one above!</p>
-        <% } %>
-      </div>
-
-      <% } else { %>
-      <form action="/sign-up" method="POST">
-        <h1>Sign Up</h1>
-
-        <label for="username">Username *</label>
-        <input
-          id="username"
-          name="username"
-          placeholder="username"
-          type="text"
-        />
-
-        <label for="email">Email *</label>
-        <input id="email" name="email" placeholder="email" type="email" />
-
-        <label for="password">Password *</label>
-        <input id="password" name="password" type="password" />
-
-        <label for="confirm-password">Confirm password *</label>
-        <input id="confirm-password" name="confirmPassword" type="password" />
-
-        <ul>
-          <% if (errors) { %> <% errors.forEach((err) => { %>
-          <li class="error"><%= err.msg %></li>
-          <% }) %> <% } %>
-        </ul>
-
-        <button type="submit">Sign Up</button>
-      </form>
-
-      <p>Already have an account? <a href="/login">Login</a></p>
+      <% if (locals.user) { %> <%- include ("partials/dashboard") %> <%- include
+      ("partials/folders") %> <% } else { %> <%- include('partials/sign-up') %>
       <% } %>
     </div>
   </body>
