Add parentId to url

--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -1,5 +1,10 @@
 <div class="actions">
   <a href="/new-file"><button>+ New file</button></a>
-  <a href="/new-folder"><button>+ New folder</button></a>
+  <a
+    href="/new-folder<%= currentFolder ? `?parentId=${currentFolder.id}` : '' %>"
+  >
+    + New folder
+  </a>
+
   <p><a href="/logout">Log out</a></p>
 </div>
