Update file download to download with its name

--- a/views/partials/file-details.ejs
+++ b/views/partials/file-details.ejs
@@ -29,7 +29,9 @@
         >
           <button type="submit">Delete</button>
         </form>
-        <a href="<%= file.fileUrl %>" download><button>Download</button></a>
+        <a href="<%= file.fileUrl %>" download="<%= file.fileName %>">
+          <button>Download</button>
+        </a>
       </div>
     </div>
   </body>
