--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -8,10 +8,10 @@
   <a
     href="/new-folder<%= currentFolder ? `?parentId=${currentFolder.id}` : '' %>"
   >
-    + New folder
+    <button>+ New folder</button>
   </a>
 
-  <p><a href="/logout">Log out</a></p>
+  <p><a href="/logout" class="logout">Log out</a></p>
 </div>
 
 <div class="dashboard">
