--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/sign-up.css" />
+    <link rel="stylesheet" href="/index.css" />
     <title>Sign Up</title>
   </head>
   <body>
@@ -26,8 +26,8 @@
           <% }) } %>
         </ul>
         <button type="submit">Login</button>
+        <p>Don't have an account? <a href="/">Sign up</a></p>
       </form>
-      <p>Don't have an account? <a href="/">Sign up</a></p>
     </div>
   </body>
 </html>
