--- a/views/partials/file-details.ejs
+++ b/views/partials/file-details.ejs
@@ -3,35 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/sign-up.css" />
+    <link rel="stylesheet" href="/file-details.css" />
     <title>File Details</title>
   </head>
   <body>
-    <div class="file-details">
-      <h2>File Information</h2>
-      <p><strong>Name:</strong> <%= file.fileName %></p>
-      <p><strong>Type:</strong> <%= file.mimeType %></p>
-      <p>
-        <strong>Size:</strong> <%= (file.size / (1024*1024)).toFixed(2) %> MB
-      </p>
-      <p>
-        <strong>Created:</strong> <%= new
-        Date(file.createdAt).toLocaleString("en-US", { dateStyle: "long",
-        timeStyle: "short" }) %>
-      </p>
+    <div class="modal-overlay" id="modal-overlay">
+      <div class="file-details">
+        <h2>File Information</h2>
+        <p><strong>Name:</strong> <%= file.fileName %></p>
+        <p><strong>Type:</strong> <%= file.mimeType %></p>
+        <p>
+          <strong>Size:</strong> <%= (file.size / (1024*1024)).toFixed(2) %> MB
+        </p>
+        <p>
+          <strong>Created:</strong> <%= new
+          Date(file.createdAt).toLocaleString("en-US", { dateStyle: "long",
+          timeStyle: "short" }) %>
+        </p>
 
-      <div class="actions">
-        <a href="/folders/<%= file.folderId %>"><button>Back</button></a>
-        <form
-          action="/folders/<%= file.folderId %>/<%= file.id %>/delete"
-          method="POST"
-          style="display: inline"
-        >
-          <button type="submit">Delete</button>
-        </form>
-        <a href="<%= file.fileUrl %>" download="<%= file.fileName %>">
-          <button>Download</button>
-        </a>
+        <div class="actions">
+          <a href="/folders/<%= file.folderId %>"><button>Back</button></a>
+          <form
+            action="/folders/<%= file.folderId %>/<%= file.id %>/delete"
+            method="POST"
+            style="display: inline"
+          >
+            <button type="submit">Delete</button>
+          </form>
+          <a href="<%= file.fileUrl %>" download="<%= file.fileName %>">
+            <button>Download</button>
+          </a>
+        </div>
       </div>
     </div>
   </body>
