--- a/views/partials/sign-up.ejs
+++ b/views/partials/sign-up.ejs
@@ -2,10 +2,10 @@
   <h1>Sign Up</h1>
 
   <label for="username">Username *</label>
-  <input id="username" name="username" placeholder="username" type="text" />
+  <input id="username" name="username" placeholder="tony-stark" type="text" />
 
   <label for="email">Email *</label>
-  <input id="email" name="email" placeholder="email" type="email" />
+  <input id="email" name="email" placeholder="example@gmail.com" type="email" />
 
   <label for="password">Password *</label>
   <input id="password" name="password" type="password" />
